訂房樣式更新

--- a/src/main/resources/public/pages/notic.html
+++ b/src/main/resources/public/pages/notic.html
@@ -84,7 +84,57 @@
         <div style="padding: 0% 20%;">
           <img src="../images/room/03.jpg" alt="">
         </div>
-        <div style="padding: 5% 20% 0% 20%">簡介..........</div>
+        <div style="padding: 5% 20% 0% 20%">
+          <p>
+            非常感謝您蒞臨本飯店<br>
+            根據法令規定，下文將為您說明入住時必須特別小心、注意的事項。<br>
+            ※ 煩請您也一併確認本飯店的住宿條款。<br>
+            如有違反住宿條款及下列規約行為，經查屬實，本飯店有可能拒絕您的住宿，敬請注意。<br>
+          </p>
+          <div>
+            <table>
+              <thead>
+                <tr>
+                  <th colspan="2">The table header</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1.請避免對近鄰、
+                    其他住客造成不良影響的行為</td>
+                  <td>請避免打擾近鄰、其他住客的行為。
+                    本飯店建築在構造上與隔壁住宅距離相當近。為了不造成附近居民的困擾，請勿在飯店內或周遭大聲對話或發出過大聲響。
+                    ※特別是在晚間 9 點至翌晨 8 點期間，休憩中的住客眾多。敬請特別注意。
+                    利用拖拉式行李箱時，請注意腳輪聲響，不要造成他人困擾。
+                    禁止利用客房或休息空間舉辦派對等行為。</td>
+                </tr>
+                <tr>
+                  <td>2.廢棄物處理相關事項</td>
+                  <td>請將垃圾分別丟棄至指定的垃圾桶。禁止將垃圾丟棄至飯店內指定場所以外的地方、丟棄至飯店外、放置及丟棄在鄰近地區。
+                    請勿丟棄、留置行李箱等大型廢棄物。如有上述行為，將要求您支付廢棄處理費用，敬請見諒。</td>
+                </tr>
+                <tr>
+                  <td>3.防火相關事項</td>
+                  <td>禁止於客房、共用空間及建築物外的飯店用地吸菸。欲吸菸者，請至 1 樓的吸菸區。
+                    此外，根據京都市路上吸菸條例的禁菸等相關條文規定，禁止在市內指定地點的路上吸菸。請注意不要在該地點周遭吸菸、亂丟煙蒂與垃圾。請不要在禁煙房內吸煙（包括用電子煙、加熱不燃燒的煙草等吸煙）。如果在禁煙房內發現吸煙或煙蒂，我們將在房費之外向客人收取10,000日元的房間清潔費和房間損壞賠償費。
+                    根據消防法規定，禁止使用卡式瓦斯爐、電磁爐等用火器具。
+                    將毛巾類、衣類物品覆蓋在室內燈或檯燈等照明器具上會成為引發火災的原因。嚴格禁止上述行為。
+                </tr>
+                <tr>
+                  <td>入住期間的注意事項</td>
+                  <td>客房樓層禁止住客之外的人士進入。請至大廳與住客之外的人士會面。
+                    禁止男性進入女性專用樓層、女廁；禁止女性進入男廁。一旦透過持續錄影的監視錄影機發現上述行為，會立即向警方通報。
+                    除了緊急狀況和經住客要求之外，工作人員不會在住客住宿期間進出客房。每間客房皆可上鎖，請務必將門上鎖，並自行管理貴重物品。若於住宿期間發生失竊情形，恕本飯店概不負責，敬請見諒。
+                    ※可是連宿時，為維護環境衛生，工作人員即使不經住客要求，也會每隔 6 天進房清掃、鋪床。
+                    禁止攜帶過大或過多的行李、經本飯店判定為危險物和具發火、引火性的物品、會造成其他住客困擾的物品等。
+                    未經許可，請勿挪動住宿設施內的備用品，或在住宿設施內安裝配件、設備。
+                    禁止將備品類物品、設置器具帶出。若有損傷、遺失情形，可能需由住宿者負擔費用。
+                    未經許可，禁止在飯店內從事營業、業務行為。
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
       <!-- ################################################################################################ -->
       <!-- / main body -->
