--- a/src/main/resources/public/pages/booking.html
+++ b/src/main/resources/public/pages/booking.html
@@ -19,7 +19,11 @@
     #comments .avatar,
     #comments input,
     #comments textarea {
-      border-style: hidden
+      border-style: hidden;
+    }
+
+    img {
+      display: block;
     }
 
     form {
@@ -38,12 +42,13 @@
       color: #333333;
       height: 40px;
       line-height: 40px;
+      background-color: #F7F7F7
     }
 
     .room_type_area {
       width: 880px;
       margin: 0 auto;
-      background: #ffffff;
+      background-color: #F7F7F7;
       padding: 20px;
       margin-bottom: 10px;
       border-bottom: 2px solid #d5d5d5;
@@ -58,9 +63,11 @@
       padding: 5px;
       border: 1px solid #e5ded9;
       margin-left: 0px;
+      background-color: #F7F7F7
     }
 
     .allroomprice_title {
+      background-color: #F7F7F7;
       height: 40px;
       font-size: 19px;
       font-weight: normal;
@@ -101,188 +108,22 @@
       text-align: -webkit-center;
       vertical-align: middle;
     }
-  </style>
-  <style>
-    .btn-29,
-    .btn-29 *,
-    .btn-29 :after,
-    .btn-29 :before,
-    .btn-29:after,
-    .btn-29:before {
-      border: 0 solid;
-      box-sizing: border-box;
-    }
 
-    .btn-29 {
-      -webkit-tap-highlight-color: transparent;
-      background-color: #000;
-      background-image: none;
+    .btnA {
+      border: 0;
+      background-color: #f3bf07;
       color: #fff;
+      border-radius: 4px;
       cursor: pointer;
-      font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-        Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
-        Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-      font-size: 100%;
-      font-weight: 900;
-      line-height: 1.5;
-      margin: 0;
-      padding: 0;
-      text-transform: uppercase;
     }
 
-    .btn-29:disabled {
-      cursor: default;
-    }
-
-    .btn-29:-moz-focusring {
-      outline: auto;
-    }
-
-    .btn-29 svg {
-      display: block;
-      vertical-align: middle;
-    }
-
-    .btn-29 [hidden] {
-      display: none;
-    }
-
-    .btn-29 {
-      --tilt: 30px;
-      border-width: 1px;
-      display: grid;
-      padding: 1.2rem 3rem;
-      place-content: center;
-    }
-
-    .btn-29,
-    .btn-29 .text-container {
-      overflow: hidden;
-      position: relative;
-    }
-
-    .btn-29 .text-container {
-      display: block;
-      width: -webkit-fit-content;
-      width: -moz-fit-content;
-      width: fit-content;
-    }
-
-    .btn-29 .text {
-      display: block;
-      font-weight: 900;
-      mix-blend-mode: difference;
-      position: relative;
-    }
-
-    .btn-29:hover .text {
-      -webkit-animation: move-right-alternate 0.3s ease forwards;
-      animation: move-right-alternate 0.3s ease forwards;
-    }
-
-    @-webkit-keyframes move-right-alternate {
-      0% {
-        transform: translateX(0);
-      }
-
-      50% {
-        transform: translateX(80%);
-      }
-
-      51% {
-        transform: translateX(-80%);
-      }
-
-      to {
-        transform: translateX(0);
-      }
-    }
-
-    @keyframes move-right-alternate {
-      0% {
-        transform: translateX(0);
-      }
-
-      50% {
-        transform: translateX(80%);
-      }
-
-      51% {
-        transform: translateX(-80%);
-      }
-
-      to {
-        transform: translateX(0);
-      }
-    }
-
-    .btn-29:before {
-      -webkit-animation: move-out 0.3s ease;
-      animation: move-out 0.3s ease;
-      background: #fff;
-      -webkit-clip-path: polygon(0 0,
-          calc(100% - var(--tilt)) 0,
-          100% 50%,
-          calc(100% - var(--tilt)) 100%,
-          0 100%);
-      clip-path: polygon(0 0,
-          calc(100% - var(--tilt)) 0,
-          100% 50%,
-          calc(100% - var(--tilt)) 100%,
-          0 100%);
-      content: "";
-      height: 100%;
-      left: calc(-100% - var(--tilt));
-      position: absolute;
-      top: 0;
-      width: calc(100% + var(--tilt));
-    }
-
-    .btn-29:hover:before {
-      -webkit-animation: move-in 0.3s ease forwards;
-      animation: move-in 0.3s ease forwards;
-    }
-
-    @-webkit-keyframes move-in {
-      0% {
-        transform: translateX(0);
-      }
-
-      to {
-        transform: translateX(100%);
-      }
-    }
-
-    @keyframes move-in {
-      0% {
-        transform: translateX(0);
-      }
-
-      to {
-        transform: translateX(100%);
-      }
-    }
-
-    @-webkit-keyframes move-out {
-      0% {
-        transform: translateX(100%);
-      }
-
-      to {
-        transform: translateX(200%);
-      }
-    }
-
-    @keyframes move-out {
-      0% {
-        transform: translateX(100%);
-      }
-
-      to {
-        transform: translateX(200%);
-      }
+    .btnA:hover {
+      color: #f3bf07;
+      background-color: #fff;
+      border: 2px #f3bf07 solid;
     }
   </style>
+
 
 </head>
 
@@ -369,7 +210,7 @@
             <option value="4">尊榮房</option>
             <option value="5">總統套房</option>
           </select> -->
-          <select id="floor" style="width:150px;height:40px;margin: 0% 5px;">
+          <select id="floor" style="width:150px;height:40px;margin: 0% 5px; border-radius: 4px;">
             <option>房間樓層</option>
             <option value="11">11</option>
             <option value="12">12</option>
@@ -381,13 +222,13 @@
             <option value="18">18</option>
 
           </select>
-          <select id="person" style="width:150px;height:40px;margin: 0% 5px;">
+          <select id="person" style="width:150px;height:40px;margin: 0% 5px;border-radius: 4px;">
             <option>入住房型</option>
             <option value="2">雙人房</option>
             <option value="4">四人房</option>
           </select>
-          <button id="search" name="search_room" class="btn-29"
-            style="width: 150px;height:40px; background-color: #f3bf07; margin: 0% 5px;">查詢空房</button>
+          <button id="search" name="search_room" class="btnA"
+            style="width: 150px;height:40px; margin: 0% 5px;">查詢空房</button>
         </form>
         <p align="center" style="color: aliceblue;">13歲以上同成人收費</ㄋ>
           </tr><br>
@@ -397,10 +238,9 @@
         <table width="948" border="0" cellpadding="0" cellspacing="0">
           <tbody>
             <tr align="left">
-              <td class="area_light" align="left">
-                <div class="allroomprice_title">
+              <td class="area_light" align="left" style="background-color:#F7F7F7; padding: 10px 0;">
+                <div class="allroomprice_title" style="padding: 6px 30px 15px;font-size: 26px;">
                   房間類型與價格
-                  &nbsp;
                 </div>
               </td>
             </tr>
@@ -525,28 +365,30 @@
           },
           headers: { "Content-Type": "application/json;charset=utf8" },
         }).done(function (msg) {
+          // console.log(msg);
+
           $('#search_content').empty();
           for (var i = 0; i < msg.length; i++) {
             $('#search_content').append(
               `
               <td align="center">
-                    <table id="DataList1" cellspacing="0" border="0" style="/* border-collapse:collapse; */">
+                    <table id="DataList1" cellspacing="0" border="0" style="/* border-collapse:collapse;*/ ">
                       <tbody>
                         <tr>
-                          <td>
-                            <div id="DataList1_ctl00_panel_DataList1">
-                              <div class="room_type_area">
+                          <td style="background-color:#F7F7F7">
+                            <div id="DataList1_ctl00_panel_DataList1" style="background-color:#F7F7F7">
+                              <div class="room_type_area" style="background-color:#F7F7F7">
                                 <table width="870" border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr align="left">
-                                      <td colspan="2" align="left">
+                                      <td colspan="2" align="left style="background-color:#F7F7F7"
                                         <div class="room_type_title">
                                           ${msg[i].roomType.roomType}
                                         </div>
                                       </td>
-                                      <td width="174" align="center">
+                                      <td width="174" align="center" style="background-color:#F7F7F7">
                                         <input type="button" name="DataList1$ctl01$btn_order" value="一般訂房"
-                                          id="${msg[i].id}" class="btn booking">
+                                          id="${msg[i].roomType.id}" class="btn booking"  >
                                       </td>
                                     </tr>
                                     <tr>
@@ -555,7 +397,7 @@
                                           class="allroomprice_line">
                                           <tbody>
                                             <tr>
-                                              <td><br></td>
+                                              <td style="background-color:#F7F7F7"><br></td>
                                             </tr>
                                           </tbody>
                                         </table>
@@ -566,7 +408,7 @@
                                         <div class="allroomprice_img">
                                           <img id="DataList1_ctl01_img_Room1"
                                             style="border-color:#E5DED9; border-width:1px; border-style:Solid; height:159px; width:240px;"
-                                            src="../images/room/尊榮雙人房.jpg">
+                                            src="data:image/jpeg;base64,${msg[i].roomType.roomPic}">
                                         </div>
                                       </td>
                                       <td width="446" align="left" valign="top">
@@ -584,7 +426,7 @@
                                         <table width="140" border="0" cellpadding="0" cellspacing="5">
                                           <tbody>
                                             <tr>
-                                              <td align="center">
+                                              <td align="center" style="background-color: ##FBFBFB">
                                                 <div>
                                                   <font style="font-size: 15px">NT$</font>${msg[i].roomType.roomPrice}
                                                 </div>
