--- a/src/main/resources/public/pages/booking.html
+++ b/src/main/resources/public/pages/booking.html
@@ -218,7 +218,8 @@
             <option value="14">14</option>
             <option value="15">15</option>
             <option value="16">16</option>
-            <option value="17">總統套房</option>
+            <option value="17">17</option>
+            <option value="18">18</option>
 
           </select>
           <select id="person" style="width:150px;height:40px;margin: 0% 5px;border-radius: 4px;">
