更改會員帳號為信箱

--- a/src/main/resources/public/frontend/forgot_password.html
+++ b/src/main/resources/public/frontend/forgot_password.html
@@ -157,7 +157,7 @@
       console.log("clicked");
       var url = "/member/forgot_password";
       var email = $("#email").val();
-      var data = '{"email":"' + email + '"}';
+      var data = '{"account":"' + email + '"}';
       console.log(data);
       $.ajax({
         beforeSend: function () {
