--- a/src/main/resources/public/frontend/myorder.html
+++ b/src/main/resources/public/frontend/myorder.html
@@ -124,7 +124,7 @@
     </div>
     <header id="header" class="hoc clear">
       <div id="logo" class="fl_left">
-        <a href="index.html">
+        <a href="../index.html">
           <div style="width: 220px; height: 70px;">
             <img src="images/logo/logo2.png">
           </div>
@@ -135,25 +135,25 @@
           <li class="active"><a href="../index.html">首頁</a></li>
           <li><a class="drop">關於我們</a>
             <ul>
-              <li><a href="pages/intro.html">簡介</a></li>
-              <li><a href="pages/traffic.html">交通資訊</a></li>
-              <li><a href="pages/notic.html">注意事項</a></li>
+              <li><a href="/pages/intro.html">簡介</a></li>
+              <li><a href="/pages/traffic.html">交通資訊</a></li>
+              <li><a href="/pages/notic.html">注意事項</a></li>
             </ul>
           </li>
           <li><a class="drop">最新消息</a>
             <ul>
-              <li><a href="pages/news.html">活動情報</a></li>
-              <li><a href="pages/discount.html">住房優惠</a></li>
+              <li><a href="/pages/news.html">活動情報</a></li>
+              <li><a href="/pages/discount.html">住房優惠</a></li>
             </ul>
           </li>
           <li><a class="drop">瀏覽房型</a>
             <ul>
-              <li><a href="pages/room.html">房型一覽</a></li>
-              <li><a href="pages/booking.html">立即訂房</a></li>
+              <li><a href="/pages/room.html">房型一覽</a></li>
+              <li><a href="/pages/booking.html">立即訂房</a></li>
             </ul>
           </li>
-          <li><a href="pages/facility.html">活動設施</a></li>
-          <li><a href="pages/contactUS.html">聯絡我們</a></li>
+          <li><a href="/pages/facility.html">活動設施</a></li>
+          <li><a href="/pages/contactUS.html">聯絡我們</a></li>
         </ul>
       </nav>
     </header>
@@ -210,38 +210,6 @@
                                       </tr>
                                     </thead>
                                     <tbody id="order">
-                                      <tr>
-                                        <td>
-                                          <div class="guest-bx">
-                                            <img class="me-3" src="static/picture/pic111.jpg" alt="">
-                                          </div>
-                                        </td>
-                                        <td>
-                                          <div>
-                                            Single Bed
-                                          </div>
-                                        </td>
-                                        <td>
-                                          <div>
-                                            Floor G-05
-                                          </div>
-                                        </td>
-                                        <td>
-                                          <div>
-                                            AC
-                                          </div>
-                                        </td>
-                                        <td>
-                                          <div>
-                                            <span class="badge light badge-success">Booked
-                                              <!-- <span class="badge light badge-warning"> -->
-                                              <!-- <span class="badge light badge-danger"></span> -->
-                                          </div>
-                                        </td>
-                                        <td>
-                                          <a class="btn" href="./orderdt/orderdt.html" role="button">查看</a>
-                                        </td>
-                                      </tr>
                                     </tbody>
                                   </table>
                                 </div>
