--- a/src/main/resources/public/frontend/person.html
+++ b/src/main/resources/public/frontend/person.html
@@ -105,8 +105,18 @@
     }
   </style>
   <script src="../assets/js/jquery.js"></script>
-  <script src="../layout/scripts/CheckLogin.js"></script>
-  <script src="../assets/js/bootstrap.min.js"></script>
+  <script>
+    $.ajax({
+      url: '/member/checkLogin',
+      type: 'GET',
+      dataType: 'json'
+    }).done(function (msg) {
+      if (msg.status != 'success') {
+        location.href = 'login.html';
+      }
+    })
+    </script>
+    <script src="../assets/js/bootstrap.min.js"></script>
 </head>
 
 <body id="top">
@@ -380,6 +390,8 @@
   <script src="../layout/scripts/Weather.js"></script>
   <!-- 公車 -->
   <script src="../layout/scripts/TDXBus.js"></script>
+  
+  <script src="../layout/scripts/CheckLogin.js"></script>
   <script>
     function save() {
       var mId = $('.form-control.mId').val()
