--- a/src/main/resources/public/pages/booking.html
+++ b/src/main/resources/public/pages/booking.html
@@ -473,16 +473,17 @@
                 'checkinDate': startDate,
                 'checkoutDate': endDate,
                 'room_id': this.id
-              }).done(function (msg) {
-                alert(msg);
               })
             }).done(function (msg) {
-              console.log(msg)
-              if (msg == "下訂完成！將跳轉到訂單頁面，請盡快付款，謝謝！") {
-                location.href = "../frontend/myorder.html"
-              } else {
-              }
+              alert(msg);
             })
+              .done(function (msg) {
+                console.log(msg)
+                if (msg == "下訂完成！將跳轉到訂單頁面，請盡快付款，謝謝！") {
+                  location.href = "../frontend/myorder.html"
+                } else {
+                }
+              })
           } else {
             alert('請先登入')
             location.href = '../frontend/login.html';
